--- a/.github/worklows/ci-workflow.yml
+++ b/.github/worklows/ci-workflow.yml
@@ -1,17 +1,20 @@
-name: BCDA CI Workflow
+name: "BCDA CI Workflow"
 
 on: [push]
 
 jobs:
   build:
-    name: Build
+    name: "Build"
     runs-on: ubuntu-latest
     steps:
-      - name: Build the stack
-        run: make docker-bootstrap
+      - name: "Build the stack"
+        run: |
+          make docker-bootstrap
   test:
-     name: Test
+     name: "Test"
      runs-on: ubuntu-latest
+     needs: build
      steps: 
-      - name: Run all tests
-         run: make test
+      - name: "Run all tests"
+         run: | 
+           make test
