Initial cut at using github actions.

--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -7,6 +7,8 @@ jobs:
     name: "Build"
     runs-on: ubuntu-latest
     steps:
+      - name: "Checkout code"
+        uses: actions/checkout@v1
       - name: "Build the stack"
         run: |
           make docker-bootstrap
